# axact

./: Cargo.toml  Makefile  README.md
debian/: changelog  service
src/: argparser.rs  fan.rs  gpu.rs  index.css  index.html  index.mjs  lib.rs  main.rs  router.rs
src/assets/: index.html  index.mjs
